now can show usb device on host

--- a/firmware/Makefile
+++ b/firmware/Makefile
@@ -62,7 +62,7 @@ STFLASH = ../tools/stlink/bin-amd64/st-flash
 APP_ADDRESS = 0x08002000
 APP_OFFSET = $(shell echo $$(($(APP_ADDRESS) - 0x08000000)))
 
-CFLAGS = -Os -std=gnu99 -Wall -pedantic -Werror -Istm32/include -mcpu=cortex-m3 -mthumb -DSTM32F1 -I$(LIBOPENCM3)/include -DAPP_ADDRESS=$(APP_ADDRESS) -ggdb3
+CFLAGS = -Os -std=gnu99 -Wall -pedantic -Werror -mcpu=cortex-m3 -mthumb -DSTM32F1 -I$(LIBOPENCM3)/include -ggdb3
 LDFLAGS = -lopencm3_stm32f1 -Wl,-Tstm32f103.ld -nostartfiles -lc -lnosys -mthumb -mcpu=cortex-m3 -L$(LIBOPENCM3)/lib/ -Wl,-gc-sections
 
 
@@ -78,21 +78,21 @@ $(BIN): $(ELF)
 $(HEX): $(ELF)
 	$(OBJCOPY) -O ihex $< $@
 
-$(ELF): $(OBJECTS) $(LIBOPENCM3)/lib/libopencm3_stm32f1.a
+$(ELF): $(OBJECTS) | $(LIBOPENCM3)/lib/libopencm3_stm32f1.a
 	echo $(OBJECTS)
-	$(LD) $(LDFLAGS) -o $@ $(OBJECTS) -Wl,-Map=$(BUILD_DIR)/$(TARGET).map
+	$(LD) $(OBJECTS) -o $@ $(LDFLAGS) -Wl,-Map=$(BUILD_DIR)/$(TARGET).map
 
 $(BUILD_DIR)/%.o: %.s
 	mkdir -p $(dir $@)
-	$(CC) -c $(CFLAGS) $< -o $@
+	$(CC) $(CFLAGS) -c -o $@ $<
 
 $(BUILD_DIR)/%.o: %.c
 	mkdir -p $(dir $@)
-	$(CC) -c $(CFLAGS) $< -o $@
+	$(CC) $(CFLAGS) -c -o $@ $<
 
 $(BUILD_DIR)/%.o: %.cpp
 	mkdir -p $(dir $@)
-	$(CXX) -c $(CFLAGS) $< -o $@
+	$(CXX) $(CFLAGS) -c -o $@ $<
 
 $(LIBOPENCM3)/lib/libopencm3_stm32f1.a:
 	$(MAKE) -C $(LIBOPENCM3) TARGETS=stm32/f1
@@ -100,5 +100,8 @@ $(LIBOPENCM3)/lib/libopencm3_stm32f1.a:
 all: $(OBJECTS) $(ELF) $(BIN)
 	$(SIZE) $(ELF)
 
-flash:
+flash: $(BUILD_DIR)/$(TARGET).bin
 	$(STFLASH) --reset write $(BUILD_DIR)/$(TARGET).bin 0x8000000
+
+clean:
+	rm -rf $(BUILD_DIR)/*
