now can simulate joystick

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,46 @@
 *.*#*
 *.o
+*.d
 *.bin
 *.elf
+*.a
 firmware/bin
+
+
+
+## libopencm3 ##
+
+*.d
+*.o
+*.bin
+*.hex
+*.list
+*.srec
+*.a
+*.elf
+*.stylecheck
+*.swp
+\#*
+.\#*
+*~
+*.map
+*.log
+*.pyc
+*.tag
+firmware/libopencm3/lib/*.ld
+firmware/libopencm3/html/
+firmware/libopencm3/latex/
+.DS_Store
+# These are generated
+firmware/libopencm3/include/libopencm3/**/nvic.h
+firmware/libopencm3/include/libopencm3/**/**/nvic.h
+firmware/libopencm3/lib/**/vector_nvic.c
+firmware/libopencm3/lib/**/**/vector_nvic.c
+firmware/libopencm3/include/libopencmsis/efm32/
+firmware/libopencm3/include/libopencmsis/lm3s/
+firmware/libopencm3/include/libopencmsis/lpc13xx/
+firmware/libopencm3/include/libopencmsis/lpc17xx/
+firmware/libopencm3/include/libopencmsis/lpc43xx/
+firmware/libopencm3/include/libopencmsis/sam/
+firmware/libopencm3/include/libopencmsis/stm32/
+firmware/libopencm3/include/libopencmsis/vf6xx/
