--- a/andon/Makefile
+++ b/andon/Makefile
@@ -46,7 +46,14 @@ UTILS_SRC += $(SRC_DIR)/utils/line_parser.cpp
 
 CORE_DIR = $(PWD)/lib/cmsis
 
+####  USB  ###
 
+COOBOC_SRC += $(SRC_DIR)/usb/hw_config.c
+COOBOC_SRC += $(SRC_DIR)/usb/usb_desc.c
+COOBOC_SRC += $(SRC_DIR)/usb/usb_endp.c
+COOBOC_SRC += $(SRC_DIR)/usb/usb_istr.c
+COOBOC_SRC += $(SRC_DIR)/usb/usb_prop.c
+COOBOC_SRC += $(SRC_DIR)/usb/usb_pwr.c
 
 CORE_SRC +=	./STM32F10x_StdPeriph_Lib_V3.5.0/Libraries/CMSIS/CM3/DeviceSupport/ST/STM32F10x/startup/gcc_ride7/startup_stm32f10x_md.s
 
@@ -76,7 +83,14 @@ DRIVER_SRC += ./STM32F10x_StdPeriph_Lib_V3.5.0/Libraries/STM32F10x_StdPeriph_Dri
 DRIVER_SRC += ./STM32F10x_StdPeriph_Lib_V3.5.0/Libraries/STM32F10x_StdPeriph_Driver/src/misc.c
 
 
-SOURCES = $(USER_SRC) $(USER_LIB_SRC) $(CORE_SRC) $(DRIVER_SRC) $(COOBOC_SRC) $(UTILS_SRC) $(DEVICE_SRC) 
+USB_LIB_SRC += ./STM32_USB-FS-Device_Driver_V4.1.0/src/usb_core.c
+USB_LIB_SRC += ./STM32_USB-FS-Device_Driver_V4.1.0/src/usb_init.c
+USB_LIB_SRC += ./STM32_USB-FS-Device_Driver_V4.1.0/src/usb_int.c
+USB_LIB_SRC += ./STM32_USB-FS-Device_Driver_V4.1.0/src/usb_mem.c
+USB_LIB_SRC += ./STM32_USB-FS-Device_Driver_V4.1.0/src/usb_regs.c
+USB_LIB_SRC += ./STM32_USB-FS-Device_Driver_V4.1.0/src/usb_sil.c
+
+SOURCES = $(USER_SRC) $(USER_LIB_SRC) $(USB_LIB_SRC) $(CORE_SRC) $(DRIVER_SRC) $(COOBOC_SRC) $(UTILS_SRC) $(DEVICE_SRC) 
 OBJECTS = $(addprefix $(BUILD_DIR)/, $(addsuffix .o, $(basename $(SOURCES))))
 
 INCLUDES += -I$(SRC_DIR)
@@ -85,6 +99,9 @@ INCLUDES += -I$(SRC_DIR)/lib
 INCLUDES += -I./STM32F10x_StdPeriph_Lib_V3.5.0/Libraries/CMSIS/CM3/CoreSupport/
 INCLUDES += -I./STM32F10x_StdPeriph_Lib_V3.5.0/Libraries/STM32F10x_StdPeriph_Driver/inc/
 INCLUDES += -I$(SRC_DIR)/utils
+
+INCLUDES += -I./STM32_USB-FS-Device_Driver_V4.1.0/inc
+INCLUDES += -I$(SRC_DIR)/usb/
 
 LDSCRIPT=./stm32f103c8t6_cooboc.ld
 CFLAGS += -O0 -W -Wall -g -mcpu=cortex-m3 -mthumb -DNDEBUG $(INCLUDES) $(DEFS)
