--- a/andon/Makefile
+++ b/andon/Makefile
@@ -22,6 +22,8 @@ COOOBOC_DIR = $(SRC_DIR)/cooboc
 USER_SRC += $(SRC_DIR)/main.cpp
 USER_SRC += $(SRC_DIR)/keyboard.cpp
 USER_SRC += $(SRC_DIR)/key.cpp
+USER_SRC += $(SRC_DIR)/event_loop.cpp
+USER_SRC += $(SRC_DIR)/fifo.cpp
 
 #DEVICE_SRC += $(SRC_DIR)/devices/a7/aia7.cpp
 #DEVICE_SRC += $(SRC_DIR)/devices/a7/at_decoder.cpp
